--- a/Months_and_years/Months_and_years.csproj
+++ b/Months_and_years/Months_and_years.csproj
@@ -46,19 +46,28 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Filereader.cs" />
-    <Compile Include="Location.cs" />
-    <Compile Include="Month.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="FormLocationDisplay.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FormLocationDisplay.Designer.cs">
+      <DependentUpon>FormLocationDisplay.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Location.cs" />
+    <Compile Include="Month.cs" />
+    <Compile Include="FormFileSelect.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormFileSelect.Designer.cs">
+      <DependentUpon>FormFileSelect.cs</DependentUpon>
     </Compile>
     <Compile Include="Start.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Year.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FormFileSelect.resx">
+      <DependentUpon>FormFileSelect.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormLocationDisplay.resx">
+      <DependentUpon>FormLocationDisplay.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
