--- a/Months_and_years/Months_and_years.csproj
+++ b/Months_and_years/Months_and_years.csproj
@@ -45,7 +45,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Filereader.cs" />
+    <Compile Include="Filehandler.cs" />
+    <Compile Include="FormYearEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormYearEdit.Designer.cs">
+      <DependentUpon>FormYearEdit.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormMonthsEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormMonthsEdit.Designer.cs">
+      <DependentUpon>FormMonthsEdit.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormMonthsDisplay.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -75,6 +87,9 @@
     <Compile Include="Start.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Year.cs" />
+    <EmbeddedResource Include="FormYearEdit.resx">
+      <DependentUpon>FormYearEdit.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormMonthsDisplay.resx">
       <DependentUpon>FormMonthsDisplay.cs</DependentUpon>
     </EmbeddedResource>
@@ -83,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormLocationDisplay.resx">
       <DependentUpon>FormLocationDisplay.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormMonthsEdit.resx">
+      <DependentUpon>FormMonthsEdit.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormYearDisplay.resx">
       <DependentUpon>FormYearDisplay.cs</DependentUpon>
