--- a/Months_and_years/Months_and_years.csproj
+++ b/Months_and_years/Months_and_years.csproj
@@ -86,6 +86,7 @@
     </Compile>
     <Compile Include="Start.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils.cs" />
     <Compile Include="Year.cs" />
     <EmbeddedResource Include="FormYearEdit.resx">
       <DependentUpon>FormYearEdit.cs</DependentUpon>
